# fs-log-viewer

./: .deps.fspm  CMakeLists.txt  README.md  main.cpp
include/: cfg.hpp  log_parser.hpp  recent.hpp
